# argon2_ffi

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: build.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  window_configuration.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp  window_configuration.cpp
ios/: argon2_ffi.podspec
ios/Classes/: Argon2FfiPlugin.h  Argon2FfiPlugin.m  CMakeLists.txt  SwiftArgon2FfiPlugin.swift  argon2_ffi.c
ios/Classes/argon2src/: README.txt
lib/: argon2_ffi.dart
linux/: CMakeLists.txt  argon2_ffi_plugin.cc
linux/include/: argon2_ffi_plugin.h
linux/include/argon2_ffi/: argon2_ffi_plugin.h
macos/: argon2_ffi.podspec
macos/Classes/: Argon2FfiPlugin.swift  README.txt  argon2_ffi.c
test/: argon2_ffi_test.dart
windows/: CMakeLists.txt  argon2_ffi_plugin.cpp
windows/include/argon2_ffi/: argon2_ffi_plugin.h
(+7 files in other folders)
